<resources>
    <string name="app_name">quokka</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="btn_login">Login</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign up</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">click to register</string>
    <string name="log_out">log out</string>
    <string name="username">Username</string>
    <string name="passwordrepeat">passwordRepeat</string>
    <string name="repeat_password">repeat password</string>
    <string name="Password">Password</string>
    <string name="repeat_password2">Repeat password</string>
    <string name="user_detail">User detail</string>
    <string name="logout">Logout</string>
    <string name="settings">settings</string>
    <string name="user_details">user details</string>
    <string name="widgets">widgets</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="group">Group</string>
    <string name="Settings" />
    <string name="text_group">Create or Join a Group</string>
    <string name="search_title" />
    <string name="create_or_join_a_group">Create or Join a Group</string>
    <string name="balance_wheel">Balance Wheel</string>
    <string name="tasks">Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="new_task" />
    <string name="save" />
    <string name="circle_with_check">Circle with Check</string>
    <string name="back_button">back button</string>
</resources>