<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="15dp"
    android:background="@drawable/login_background"
    android:layout_height="match_parent"
    tools:context=".ui.login.Register">


  <ImageView
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:src="@drawable/baseline_accessibility_new_24"
      />

  <TextView
      android:text="@string/register"
      android:textColor="@color/white"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="25sp"
      android:textStyle="bold"
      android:gravity="center"
      android:layout_marginBottom="20dp"
      />
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/layoutUsername"
      android:padding="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:padding="15dp"
        android:id="@+id/username"
        android:hint="@string/username"
        android:background="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/layoutEmail"
      android:padding="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:padding="15dp"
        android:id="@+id/email"
        android:hint="@string/email"
        android:background="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/layoutPassword"
      android:padding="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:padding="15dp"
        android:id="@+id/password"
        android:hint="@string/Password"
        android:background="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/repeatpassword"
      android:padding="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
    <com.google.android.material.textfield.TextInputEditText
        android:padding="15dp"
        android:id="@+id/passwordRepeat"
        android:hint="@string/repeat_password2"
        android:background="@color/white"
        android:textColorHint="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
  </com.google.android.material.textfield.TextInputLayout>

  <ProgressBar
      android:id="@+id/progressBar"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"/>

  <Button
      android:id="@+id/btn_signup"
      android:text="@string/sign_up"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />

  <TextView
      android:id="@+id/loginNow"
      android:text="@string/click_to_login"
      android:textColor="@color/white"
      android:textSize="20sp"
      android:textStyle="bold"
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      />
</LinearLayout>